# petronash-hmi

./: .gitignore  .pre-commit-config.yaml  DASHBOARD_README.md  README.md  build.sh  doover_config.json  pyproject.toml  run_dev_server.py  run_local.py
.github/workflows/: build-image.yml  lint-and-test.yml  validate-schema.yml
simulators/: app_config.json  docker-compose.yml
src/petronash_hmi/: __init__.py  app_config.py  app_tags.py  app_ui.py  application.py  dashboard.py
src/petronash_hmi/static/css/: dashboard.css  hmi-core.css
src/petronash_hmi/static/js/: dashboard.js  hmi-core.d.ts  hmi-core.js
src/petronash_hmi/templates/: dashboard.html
src/sia_local_control_ui/: app_config.py  application.py  dashboard.py
src/sia_local_control_ui/static/css/: dashboard.css
src/sia_local_control_ui/static/js/: dashboard.js
src/sia_local_control_ui/templates/: dashboard.html
tests/: test_dashboard_data.py  test_imports.py  test_setpoints.py
tests/js/: formatTimeToEmpty.test.mjs
widget/: README.md  package-lock.json  package.json  rsbuild.config.ts  tsconfig.json
widget/src/: PetronashHmiWidget.tsx  globals.d.ts
widget/src/lib/: assembleDashboardData.ts
widget/tests/: assembleDashboardData.test.mjs
