[project]
name = "petronash-hmi"
version = "0.1.0"
description = "Petronash local control HMI for SIA pump skids"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydoover>=1.9.0",
    "flask>=3.0.0",
    "flask-socketio>=5.3.0",
]

[project.scripts]
doover-app-run = "petronash_hmi:main"
export-config = "petronash_hmi.app_config:export"
export-ui = "petronash_hmi.app_ui:export"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "aiohttp>=3.11.18",
    "grpcio>=1.71.0",
    "protobuf>=6.30.2",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]
