[project]
name = "petronash-hmi"
version = "0.1.0"
description = "Petronash HMI — widget-only Doover cloud processor (PRO) for SIA pump skids"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydoover>=1.9.1",
]

[project.scripts]
export-config = "petronash_hmi.app_config:export"
export-ui = "petronash_hmi.app_ui:export"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/petronash_hmi"]

[dependency-groups]
dev = [
    "aiohttp>=3.11.18",
    "grpcio>=1.71.0",
    "protobuf>=6.30.2",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
